examples/test/testpolicy1683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1683
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key2: value2
      key45: value26
      key20: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value5
          key6: value37
      podSelector:
        matchLabels:
          key23: value33
          key43: value14
